--- a/scripts/README.mustache
+++ b/scripts/README.mustache
@@ -286,11 +286,12 @@ npm run update-dependencies
 
 ## Changelog
 
-- **0.1.2** - Support [`Record`](https://facebook.github.io/immutable-js/docs/#/Record) properties.
+- **0.1.3** - API docs added.
+- **0.1.2** - Support >Immutable.Record properties.
 
 ## Roadmap
 
-- [ ] Improve docs. Complete API docs and extension guide
+- [ ] More examples
 - [ ] Better test coverage
 - [ ] Annotate source [Flow](http://flowtype)
 
