--- a/scripts/README.mustache
+++ b/scripts/README.mustache
@@ -286,7 +286,7 @@ npm run update-dependencies
 
 ## Changelog
 
-- **0.1.3** - API docs added. Fixed license referenceing 
+- **0.1.3** - API docs added. Fixed license referencing in package.json courtesy of [kemitchell](https://github.com/kemitchell).
 - **0.1.2** - Support >Immutable.Record properties.
 
 ## Roadmap
