--- a/scripts/README.mustache
+++ b/scripts/README.mustache
@@ -286,6 +286,7 @@ npm run update-dependencies
 
 ## Changelog
 
+- **0.1.6** - Dependencies updated. Built against latest Babel version. 
 - **0.1.5** - Forgot to add transpiled files from 0.1.4. Big facepalm!
 - **0.1.4** - In order to keep up with >contrib/cursor ([see commit here](https://github.com/facebook/immutable-js/commit/22baae69cdacf4b6cf43918d3a97ea1575ed67fb)), you can now set a cursor value directly. All dependencies updated.
 - **0.1.3** - API docs added. Fixed license referencing in package.json courtesy of [kemitchell](https://github.com/kemitchell).
